v5-canary-deploymemt/details_virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details-route
spec:
  hosts:
  - details
  http:
  - name: "details-route"
    route:
    - destination:
        host: details
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx
