v5-canary-deploymemt/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
# now looking into the canary deployment
# version-1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo-gateway
spec:
  hosts:
  - bookinfo.bksahu.com
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        subset: v1  
        port:
          number: 9080
      weight: 40
    - destination:
        host: productpage
        subset: v2 
        port:
          number: 9080
      weight: 60  
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: product-destination
spec:
  host: productpage
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
       version: v2
